# rp2040_noos

./: README.md  envsetup.sh
00_helloworld/: CMakeLists.txt  crt1.S
linker/: CMakeLists.txt
